feat(iengine-it): 新增 MySql→Postgres 参照实现 + 类级别 Fork 并行隔离
- 新增 MySql2PostgresIT（Postgres JDBC 目标组合）、DbForgeProvisioner（动态供应）、
  dbforge-host-mapping.properties（公网外 host 映射）
- failsafe 改为 reuseForks=false + forkCount=\${engine.it.forkCount}(默认2)，
  每个 *IT 类独占 JVM 并行执行；逐 fork 隔离端口(18{N}80)、工作目录、dist
- EngineRuntime 反射逐 fork 改写 backend_url/TAPDATA_WORK_DIR 进程 env
  （JDK17 正确目标：theUnmodifiableEnvironment 背后的 StringEnvironment，
  不碰 Variable-keyed theEnvironment）
- EngineIT @BeforeAll 按 testClass 重建 engineIT/taskService（纵深防御）；
  conn-id 下放各组合子类私有唯一常量（MySqlMongoIT …0a/0b、MySql2PostgresIT …0c/0d）
- TaskFixture 注入 connector spec dataTypes 类型映射表达式；
  MockTM 增强（WebSocket 心跳、非 object 数组元素跳过、checkMd5 返回真实值）
- src/it/README 更新：执行模型、逐 fork 隔离要点、JDK17 env 反射坑、jar copy 噪声说明
- 父 pom 新增 engine.it.forkCount 属性

验证：两类并行 31/31 全绿（BUILD SUCCESS, ~4min wall-time ≈ 单类时长 → 真并行）